test/fail_compilation/fail6451.d

version(X86_64)
{
    void error(...){}
}
else
{
    static assert(0);
}

